<resources>
    <string name="app_name">Nasa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="picture_of_the_day_request">planetary/apod</string>

    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="cicero">
        Sed ut perspiciatis, unde omnis iste natus error sit voluptatem
        accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo
        inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim
        ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia
        consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro
        quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit,
        sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam
        aliquam quaerat voluptatem.
    </string>

    <string name="nasapictureoftheday">NasaPictureOfTheDay</string>
    <string name="hint">Wiki search</string>
    <string name="before_yesterday">Before yesterday</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="fayvourite">Fayvourite</string>
    <string name="wiki_search">Wiki search</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="moon_theme">Moon Theme</string>
    <string name="mars_theme">Mars Theme</string>
    <string name="earth">Earth</string>
    <string name="marscuriosity">MarsCuriosity</string>
    <string name="epic">EPIC</string>
    <string name="apod">APOD</string>
    <string name="layout">Layout</string>
    <string name="application">Application</string>
    <string name="motion">Motion</string>
    <string name="animate">Animate</string>
    <string name="transitions_example">Transitions example</string>
    <string name="tap_on_me">TAP ON ME</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="danielson_crater">
        На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км),
        расположенного на юго-востоке области Arabia Terra.
    </string>
    <string name="home">Home</string>
    <string name="animation">Animation</string>
    <string name="earth_item">Земля</string>
    <string name="additional_text">Дополнительный текст</string>
    <string name="mars">Марс</string>
    <string name="note_description">Note Description</string>
    <string name="priority">Priority</string>
    <string name="low_prior_note">Low Prior Note</string>
    <string name="norm_prior_name">Norm Prior Name</string>
    <string name="notes">Notes</string>
</resources>