<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/apod" />
    <item
        android:id="@+id/action_view_mars"
        android:icon="@drawable/ic_mars"
        android:title="@string/marscuriosity" />
    <item
        android:id="@+id/action_view_system"
        android:icon="@drawable/ic_system"
        android:title="@string/epic" />

    <item
        android:id="@+id/action_layout"
        android:icon="@drawable/ic_baseline_animation_24"
        android:title = "@string/animation" />

    <item
        android:id="@+id/action_motion"
        android:icon="@drawable/ic_baseline_auto_awesome_motion_24"
        android:title = "@string/motion" />

</menu>