<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PictureOfTheDayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:singleSelection="true"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipbeforeyesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/before_yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipyesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chiptoday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

        </com.google.android.material.chip.ChipGroup>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="wiki_helper_text"
            android:hint="@string/hint"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_wikipedia"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"  >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.geekbrain.android.nasa_api.utils.MyImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nasapictureoftheday"
            app:layout_constraintTop_toBottomOf="@+id/inputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:id="@+id/mainFragmentLoadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>